# raid-manager

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CreateRaidDialog.cpp  CreateRaidDialog.h  DiskVisualWidget.cpp  DiskVisualWidget.h  MainWindow.cpp  MainWindow.h  MdadmBackend.cpp  MdadmBackend.h  Models.h  QueuePanel.cpp  QueuePanel.h  RaidTableWidget.cpp  RaidTableWidget.h  main.cpp
